cluster/apps/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.homelab.local`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          # Esta línea es la que hace referencia al ServersTransport de arriba.
          serversTransport: argocd-transport
